--- a/sendmail/templates/stafflist.html
+++ b/sendmail/templates/stafflist.html
@@ -40,7 +40,7 @@
     
     
     <!-- Staff list -->
-    <div class="p-6 md:pb-4 max-w-3xl bg-white rounded-lg border mx-auto shadow-md sm:p-10 min-h-full justify-center">
+    <div class="p-6 md:pb-4 max-w-3xl mb-20 md:mb-20 bg-white rounded-lg border mx-auto shadow-md sm:p-10 min-h-full justify-center">
         <div class="flex justify-between items-center mb-4">
             <h5 class="text-3xl font-bold leading-none text-gray-900 dark:text-white">Staff List</h5>    
         </div>
@@ -97,167 +97,7 @@
         <!-- End of Staff list -->
 
         <!-- Pagination -->
-        <div class="bg-white pt-6 md:pb-4 flex items-center justify-between border-t border-gray-200">
-            {% block pagination %}
-                {% if is_paginated %}
-            
-                    <!-- Previous and Next buttons for mobile menu -->
-                    <div class="flex-1 flex justify-between sm:hidden">
-
-                        <!-- Previous button -->
-                        {% if page_obj.has_previous %}                    
-                            <a href="{{ request.path }}?page={{ page_obj.previous_page_number }}">
-                                <button type="button"
-                                    class="relative inline-flex items-center px-4 py-2 border border-gray-300 
-                                            text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50">
-                                    Previous
-                                </button>
-                            </a>
-                            {% else %}                   
-                                <a>
-                                    <button type="button" disabled
-                                        class="relative inline-flex items-center px-4 py-2 border border-gray-300 
-                                               text-sm font-medium rounded-md text-gray-400 bg-white">
-                                        Previous
-                                    </button>
-                                </a>
-                        {% endif %}
-                        
-                        <!-- Next button -->
-                        {% if page_obj.has_next %}                    
-                            <a href="{{ request.path }}?page={{ page_obj.next_page_number }}" 
-                                    class="relative inline-flex items-center px-4 py-2 border border-gray-300 
-                                            text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50">
-                                Next
-                            </a>
-                            {% else %}                   
-                                <a>
-                                    <button type="button" disabled
-                                        class="relative inline-flex items-center px-4 py-2 border border-gray-300 
-                                                text-sm font-medium rounded-md text-gray-400 bg-white">
-                                        Next
-                                    </button>
-                                </a>
-                        {% endif %}
-                    </div>
-                
-                    <!-- Desktop view buttons -->
-                    <div class="hidden sm:flex-1 sm:flex sm:items-center sm:justify-between">
-                        
-                        <!-- Showing 1 to 10... -->
-                        <div>
-                            <p class="text-md text-gray-700">
-                                Showing
-                                <span class="font-medium">1</span>
-                                to
-                                <span class="font-medium">10</span>
-                                of
-                                <span class="font-medium">{{ total_staff }}</span>
-                                results
-                            </p>
-                        </div>
-                        
-                        <!-- Pages -->
-                        <div>                            
-                            <nav class="relative z-0 inline-flex rounded-md shadow-sm -space-x-px" aria-label="Pagination">
-                                {% if page_obj.has_previous %}
-                                    <a href="{{ request.path }}?page={{ page_obj.previous_page_number }}">
-                                        <button type="button" class="relative inline-flex items-center px-2 py-2 rounded-l-md border border-gray-300 
-                                                                    bg-white text-sm font-medium text-gray-500 hover:bg-gray-50">
-                                            <span class="sr-only">Previous</span>
-                                            <!-- Heroicon name: solid/chevron-left -->
-                                            <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
-                                                aria-hidden="true">
-                                                <path fill-rule="evenodd"
-                                                    d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z"
-                                                    clip-rule="evenodd" />
-                                            </svg>
-                                        </button>
-                                    </a>
-                                    {% else %}
-                                        <a>
-                                            <button type="button" disabled class="relative inline-flex items-center px-2 py-2 rounded-l-md border border-gray-300 
-                                                                                bg-white text-sm font-medium text-gray-400">
-                                                <span class="sr-only">Previous</span>
-                                                <!-- Heroicon name: solid/chevron-left -->
-                                                <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
-                                                    aria-hidden="true">
-                                                    <path fill-rule="evenodd"
-                                                        d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z"
-                                                        clip-rule="evenodd" />
-                                                </svg>
-                                            </button>
-                                        </a>
-                                {% endif %}
-                                
-                                <!-- Current: "z-10 bg-indigo-50 border-indigo-500 text-indigo-600", Default: "bg-white border-gray-300 text-gray-500 hover:bg-gray-50" -->
-                                <!-- Pages -->
-                                {% for i in page_obj.paginator.page_range %}
-                                    {% if blog_posts.number == i %}
-                                        <a class="bg-white border-gray-300 text-gray-500 hover:bg-gray-50 relative inline-flex 
-                                                    items-center px-4 py-2 border text-sm font-medium">
-                                            {{ i }}
-                                        </a>
-                                        {% else %}
-                                            <a class="bg-white border-gray-300 text-gray-500 hover:bg-gray-50 relative inline-flex 
-                                            items-center px-4 py-2 border text-sm font-medium" href="?{% if query %}q={{query}}&{% endif %}page={{ i }}">{{ i }}</a>
-                                    {% endif %}
-                                {% endfor %}
-                                <span
-                                    class="relative inline-flex items-center px-4 py-2 border border-gray-300 
-                                            bg-white text-sm font-medium text-gray-700">... </span>
-                                <a href="#"
-                                    class="bg-white border-gray-300 text-gray-500 hover:bg-gray-50 hidden md:inline-flex 
-                                            relative items-center px-4 py-2 border text-sm font-medium">8 </a>
-                                <a href="#"
-                                    class="bg-white border-gray-300 text-gray-500 hover:bg-gray-50 relative inline-flex 
-                                            items-center px-4 py-2 border text-sm font-medium">
-                                    9 </a>
-                                <a href="#"
-                                    class="bg-white border-gray-300 text-gray-500 hover:bg-gray-50 relative inline-flex items-center px-4 py-2 border text-sm font-medium">
-                                    10 </a>
-                                {% if page_obj.has_next %}
-                                    <a href="{{ request.path }}?page={{ page_obj.next_page_number }}">
-                                        <button class="relative inline-flex items-center px-2 py-2 rounded-r-md border border-gray-300 bg-white 
-                                                        text-sm font-medium text-gray-500 hover:bg-gray-50">
-                                            <span class="sr-only">Next</span>
-                                            <!-- Heroicon name: solid/chevron-right -->
-                                            <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
-                                                aria-hidden="true">
-                                                <path fill-rule="evenodd"
-                                                    d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
-                                                    clip-rule="evenodd" />
-                                            </svg>
-                                        </button>
-                                    </a>
-                                    {% else %}
-                                        <a>
-                                            <button type="button" disabled class="relative inline-flex items-center px-2 py-2 rounded-r-md border border-gray-300 bg-white 
-                                                            text-sm font-medium text-gray-400">
-                                                <span class="sr-only">Next</span>
-                                                <!-- Heroicon name: solid/chevron-right -->
-                                                <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
-                                                    aria-hidden="true">
-                                                    <path fill-rule="evenodd"
-                                                        d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
-                                                        clip-rule="evenodd" />
-                                                </svg>
-                                            </button>
-                                        </a>                                
-                                {% endif %}
-                            </nav>
-                            <!-- End of pages -->
-
-                        </div>
-                        <!-- End pages -->
-
-                    </div>
-                    <!-- End Desktop view buttons -->
-                    
-                {% endif %}
-            {% endblock %}
-        </div>
-        <!-- End of Pagination -->
+        {% include 'snippets/pagination_stafflist.html' with stafflist=page_obj %}        
 
     </div>
     <!-- End of Staff list -->    
