--- a/sendmail/templates/searchresult.html
+++ b/sendmail/templates/searchresult.html
@@ -38,7 +38,7 @@
     </div>
     
     <!-- Search Result -->
-    <div class="p-6 lg:p-8 max-w-3xl bg-white rounded-lg border mx-auto shadow-md min-h-full justify-center">
+    <div class="p-6 md:p-8 mb-20 md:mb-20 md:pb-4 max-w-3xl bg-white rounded-lg border mx-auto shadow-md min-h-full justify-center">
         <div class="flex justify-between items-center mb-4">
             <h5 class="text-2xl md:text-3xl font-bold text-gray-900 dark:text-white">
                 Found {{ count_query }} result(s) for "{{ query }}"
@@ -103,63 +103,11 @@
                 {% endif %}
             </ul>
         </div>
+
+        <!-- Pagination -->
+        {% include 'snippets/pagination_searchresult.html' with searchresult=page_obj %}
+
     </div>
+    <!-- End Search Result -->    
     
-    <!-- Pagination -->
-    {% block pagination %}
-        {% if is_paginated %}
-            <div class="container font-medium text-gray-500 text-md md:text-lg flex flex-col 
-                        space-y-4 items-center justify-center mt-8 md:mt-8 pagination">
-
-                <!-- Page breadcrumbs -->
-                <span class="page-current text-gray-700">
-                    Showing Page <span>{{ page_obj.number }}</span>
-                      of <span>{{ page_obj.paginator.num_pages }}</span> Pages
-                </span>
-
-                <!-- Buttons -->
-                <div class="inline-flex mt-2 xs:mt-0">
-                    
-                    <!-- Prev Button -->
-                    {% if page_obj.has_previous %}
-                        <a href="?page={{ page_obj.previous_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">
-                            <button class="inline-flex items-center py-2 px-4 text-sm font-medium text-white bg-blue-600 
-                                            rounded-l hover:bg-blue-500 dark:bg-gray-800 dark:border-gray-700 
-                                            dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
-                                    <span class="inline-flex items-center">
-                                        <svg class="mr-2 w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                                            <path fill-rule="evenodd"
-                                                d="M7.707 14.707a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 1.414L5.414 9H17a1 1 0 110 2H5.414l2.293 2.293a1 1 0 010 1.414z"
-                                                clip-rule="evenodd"></path>
-                                        </svg>
-                                        Prev
-                                    </span>
-                            </button> 
-                        </a>                   
-                    {% endif %}
-                    
-                    <!-- Next Button -->
-                    {% if page_obj.has_next %}
-                        <a href="?page={{ page_obj.next_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">
-                            <button class="py-2 px-4 text-sm font-medium text-white 
-                                            bg-blue-700 rounded-r border-0 border-l border-blue-600 hover:bg-blue-500 
-                                            dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 
-                                            dark:hover:text-white">
-                                    <span class="inline-flex items-center">
-                                        Next
-                                        <svg class="ml-2 w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                                            <path fill-rule="evenodd"
-                                                d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z"
-                                                clip-rule="evenodd"></path>
-                                        </svg>
-                                    </span>
-                            </button>
-                        </a>                  
-                    {% endif %}
-                </div>                
-            </div>
-            {% else %}
-                <div class="mb-8 md:mb-12"></div>
-        {% endif %}
-    {% endblock %}
 {% endblock %}
