code update 10:08PM 01/07/2022

--- a/sendmail/templates/base.html
+++ b/sendmail/templates/base.html
@@ -12,9 +12,11 @@
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.js"></script>	
 		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.js"></script>
+		<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/themes/ui-lightness/jquery-ui.css" rel="stylesheet" type="text/css" />
 		{% tailwind_css %}
 	</head>
 
+	<!-- Body -->
 	<body class="bg-gray-200 font-sans p-4">
         
 		<!-- Navbar -->
@@ -141,6 +143,7 @@
 
         {% endblock %}
 	</body>
+	<!-- End Body -->
 	
 	<!-- Footer -->	
 	<footer class="px-4 mt-20 bg-none pb-4 bottom-0 md:bottom-0 md:px-6 dark:bg-gray-800">		
@@ -225,4 +228,5 @@
 		  }
 		}
 	</script>
+
 </html>
