--- a/sendmail/templates/snippets/pagination_searchresult.html
+++ b/sendmail/templates/snippets/pagination_searchresult.html
@@ -60,7 +60,7 @@
                         to
                         <span class="font-medium">10</span>
                         of
-                        <span class="font-medium">{{ total_staff }}</span>
+                        <span class="font-medium">{{ count_query }}</span>
                         results
                     </p>
                 </div>
