--- a/sendmail/templates/staffdetails.html
+++ b/sendmail/templates/staffdetails.html
@@ -12,34 +12,7 @@
 {% block content %}
 
     <!-- Search bar -->
-    <div class="max-w-3xl rounded-lg mx-auto mt-8 mb-8">
-
-        <!-- Search form -->
-        <form action="{% url 'searchresult' %}" class="flex items-center" method="GET">            
-            {% csrf_token %}
-            <div class="relative w-full">
-
-                <!-- Input -->
-                <input type="text" id="simple-search" name="q" class="bg-white block font-medium border border-none text-gray-900 text-lg rounded-md 
-                                                        focus:border-blue-500 block w-full p-4  
-                                                        focus:ring-2 focus:outline-none focus:ring-blue-500
-                                                        dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 
-                                                        dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                    placeholder="Search for a staff..." required>
-            </div>
-
-            <!-- Submit Query -->
-            <button type="submit" class="px-8 py-4 ml-2 text-md font-medium text-white bg-blue-700 rounded-md border
-                                        border-2 border-blue-700 hover:border-blue-800 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 
-                                        dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
-                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                        d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
-                </svg>
-            </button>
-        </form>
-    </div>
+    {% include 'snippets/searchbar.html' %}
     
     <!-- Profile Card -->
     <div class="max-w-3xl mx-auto px-8 mb-32 bg-white rounded-lg border border-gray-200 shadow-lg dark:bg-gray-800 dark:border-gray-700">   
@@ -199,7 +172,7 @@
                 <a href="{% url 'updatestaff' staff.id %}">
                     <button type="button" class="inline-flex items-center mr-1 ml-1 px-8 py-2 border border-blue-600 rounded-md shadow-sm 
                                                 text-md font-medium text-white bg-blue-700 hover:border-indigo-500 hover:bg-blue-800 
-                                                text-center focus:outline-none focus:ring-4 focus:ring-blue-400">
+                                                text-center focus:outline-none focus:ring-4 focus:ring-offset-2 focus:ring-blue-500">
                         <span class="inline-flex items-center">
                             <svg class="-ml-1 mr-2 h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
                                 fill="currentColor" aria-hidden="true">
@@ -214,7 +187,7 @@
                 <!-- Remove -->
                 <button id="openmodal" type="button" class="inline-flex items-center ml-1 px-8 py-2 border border-red-600 rounded-md shadow-sm 
                                                             text-md font-medium text-white bg-red-600 hover:border-red-700 hover:bg-red-700 
-                                                            focus:outline-none focus:ring-4 focus:ring-red-400">
+                                                            focus:outline-none focus:ring-4 focus:ring-offset-2 focus:ring-red-500">
                     <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5 text-white" fill="none" viewBox="0 0 24 24"
                         stroke="currentColor" stroke-width="2">
                         <path stroke-linecap="round" stroke-linejoin="round"
