--- a/sendmail/templates/stafflist.html
+++ b/sendmail/templates/stafflist.html
@@ -8,35 +8,7 @@
 
 {% block content %}
     <!-- Search bar -->
-    <div class="max-w-3xl rounded-lg mx-auto mt-8 mb-8">
-    
-        <!-- Search form -->
-        <form action="{% url 'searchresult' %}" class="flex items-center" method="GET">
-    
-            <div class="relative w-full">
-    
-                <!-- Input -->
-                <input type="text" id="simple-search" name="q" 
-                class="bg-white block font-medium border border-none text-gray-900 text-lg rounded-md 
-                focus:border-blue-600 block w-full p-4  
-                focus:ring-2 focus:outline-none focus:ring-blue-600
-                dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 
-                dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                    placeholder="Search for a staff..." required>
-            </div>
-    
-            <!-- Submit Query -->
-            <button type="submit" class="px-8 py-4 ml-2 text-md font-medium text-white bg-blue-700 rounded-md border
-                                            border-2 border-blue-700 hover:border-blue-800 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 
-                                            dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
-                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                        d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
-                </svg>
-            </button>
-        </form>
-    </div>
+    {% include 'snippets/searchbar.html' %}
     
     
     <!-- Staff list -->
@@ -79,7 +51,7 @@
                                 <a href="{% url 'staffdetails' staff.id %}">
                                     <button type="button" class="inline-flex items-center px-4 py-2 border border-2 border-blue-300 rounded-md shadow-sm 
                                                                 text-sm font-medium text-white bg-blue-300 hover:bg-blue-400 focus:outline-none 
-                                                                hover:border-blue-400 focus:ring-2 focus:ring-offset-2 focus:ring-blue-400 focus:z-10">
+                                                                hover:border-blue-400 focus:ring-4 focus:ring-offset-2 focus:ring-blue-400">
                                         <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"
                                             stroke-width="2">
                                             <path stroke-linecap="round" stroke-linejoin="round"
