--- a/sendmail/templates/base.html
+++ b/sendmail/templates/base.html
@@ -10,9 +10,12 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<link rel="stylesheet" href="//code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css">
-  		<link rel="stylesheet" href="/resources/demos/style.css">
-		<script type="text/javascript" src="{{ STATIC_URL }}js/jquery.js" />
+
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.js"></script>	
+		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.13.1/jquery-ui.js"></script>
+	
+		<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/themes/ui-lightness/jquery-ui.css" rel="stylesheet" type="text/css" />
+		<!-- <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.js" /> -->
 		<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
         <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
 
