--- a/sendmail/templates/searchresult.html
+++ b/sendmail/templates/searchresult.html
@@ -11,7 +11,7 @@
     {% include 'snippets/searchbar.html' %}
     
     <!-- Search Result -->
-    <div class="p-6 md:p-8 mb-20 md:mb-20 md:pb-4 max-w-3xl bg-white rounded-lg border mx-auto shadow-md min-h-full justify-center">
+    <div class="p-6 mt-8 md:p-8 mb-20 md:mb-20 md:pb-4 max-w-3xl bg-white rounded-lg border mx-auto shadow-md min-h-full justify-center">
         <div class="flex justify-between items-center mb-4">
             <h5 class="text-2xl md:text-3xl font-bold text-gray-900 dark:text-white">
                 Found {{ count_query }} result(s) for "{{ query }}"
@@ -70,7 +70,7 @@
                     {% else %}
                         <div class="flex items-center justify-center">
                             <h5 class="text-2xl font-medium text-gray-900 py-6 dark:text-white">
-                                No Record found
+                                <em>No Record found</em>
                             </h5>
                         </div>
                 {% endif %}
